--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=demo
 
-spring.data.mongodb.uri=mongodb+srv://20213tn019:ARRthNEMxjgUOvFu@maraton-juniot.7gwl3.mongodb.net/demo?retryWrites=true&w=majority&appName=maraton-juniot
+spring.data.mongodb.uri=mongodb://localhost:27017/demo
